tests/good/interpret/053-def-1-with.clap
def f (x) = y with y = 42
val q = f (1)

